--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://dev.tarathep.com:3306/sagaeco
+spring.datasource.url=jdbc:mysql://a97a09105d01.sn.mynetname.net:3306/sagaeco
 spring.datasource.username=root
 spring.datasource.password=
 
-security.basic.enabled=false
-management.security.enabled=false
+#server.session.tracking-modes=cookie
+
+# security.basic.enabled=false
+# management.security.enabled=false
