--- a/bin/dockerfile
+++ b/bin/dockerfile
@@ -1,3 +1,6 @@
 FROM openjdk:8u111-jdk-alpine
 ADD eco-0.0.3-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
+
+
+#docker run -d --name saga-web -p 12300:8080 -e spring.datasource.url=jdbc:mysql://192.168.88.208:3306/sagaeco -e spring.datasource.password= sagaweb:1.0.0
