--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,12 @@ jobs:
     - name: Check out the repo
       uses: actions/checkout@v2
     
+    - name: Load Artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: artifact
+        path: '${{ github.workspace }}/target'
+    
     - name: Log in to Docker Hub
       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
       with:
