--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,21 +52,15 @@ jobs:
         path: '${{ github.workspace }}/target'
     
     - name: Log in to Docker Hub
-      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     
-    - name: Extract metadata (tags, labels) for Docker
-      id: meta
-      uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-      with:
-        images: kietara/sagaweb
     
-    - name: Build and push Docker image
-      uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+    - name: Build and push
+      id: docker_build
+      uses: docker/build-push-action@v2
       with:
-        context: .
         push: true
-        tags: latest
-        labels: econline.org
+        tags: kietara/sagaweb:latest
