--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,3 +70,19 @@ jobs:
       with:
         push: true
         tags: kietara/sagaweb:latest
+
+  
+  deploy:
+    name: Deploy to Production
+    runs-on: ubuntu-latest
+    needs: [push_to_registry]
+    steps:
+    - name: Deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.BOKIE_SERVER_HOST }}
+        username: ${{ secrets.BOKIE_SERVER_USERNAME }}
+        password: ${{ secrets.BOKIE_SERVER_PASSWORD }}
+        port: ${{ secrets.BOKIE_SERVER_PORT }}
+        script: | 
+          docker run -d --name saga-web -p 12300:8080 -e spring.datasource.url=jdbc:mysql://192.168.88.254:3306/sagaeco -e spring.datasource.password=${{ secrets.SAGADB_PASSWORD }} sagaweb:latest
