--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,5 +94,8 @@ jobs:
         username: ${{ secrets.BOKIE_SERVER_USERNAME }}
         password: ${{ secrets.BOKIE_SERVER_PASSWORD }}
         port: ${{ secrets.BOKIE_SERVER_PORT }}
-        script: | 
+        script: |
+          docker stop saga-web
+          docker rm saga-web
+          docker rmi kietara/sagaweb:latest
           docker run -d --name saga-web -p 12300:8080 -e spring.datasource.url=jdbc:mysql://192.168.88.254:3306/sagaeco -e spring.datasource.password=${{ secrets.SAGADB_PASSWORD }} kietara/sagaweb:latest
