--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,42 +60,32 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     
-    
     - name: Build and push
       run: |
         docker build -t kietara/sagaweb:latest .
         docker push kietara/sagaweb:latest
-      # # working-directory: ${{ github.workspace }}
-      # id: docker_build
-      # uses: docker/build-push-action@v2
-      # with:
-      #   context: .${{ github.workspace }}
-      #   push: true
-      #   tags: kietara/sagaweb:latest
       
       
-      
-
   
-  deploy:
-    name: Deploy to Production
-    runs-on: ubuntu-latest
-    needs: [push_to_registry]
+#   deploy:
+#     name: Deploy to Production
+#     runs-on: ubuntu-latest
+#     needs: [push_to_registry]
 
-    environment:
-      name: Production
-      url: 'https://econline.org'
+#     environment:
+#       name: Production
+#       url: 'https://econline.org'
     
-    steps:
-    - name: Deploy
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.BOKIE_SERVER_HOST }}
-        username: ${{ secrets.BOKIE_SERVER_USERNAME }}
-        password: ${{ secrets.BOKIE_SERVER_PASSWORD }}
-        port: ${{ secrets.BOKIE_SERVER_PORT }}
-        script: |
-          docker stop saga-web
-          docker rm saga-web
-          docker rmi kietara/sagaweb:latest
-          docker run -d --name saga-web -p 12300:8080 -e spring.datasource.url=jdbc:mysql://172.16.20.10:3306/sagaeco -e spring.datasource.password=${{ secrets.SAGADB_PASSWORD }} kietara/sagaweb:latest
+#     steps:
+#     - name: Deploy
+#       uses: appleboy/ssh-action@master
+#       with:
+#         host: ${{ secrets.BOKIE_SERVER_HOST }}
+#         username: ${{ secrets.BOKIE_SERVER_USERNAME }}
+#         password: ${{ secrets.BOKIE_SERVER_PASSWORD }}
+#         port: ${{ secrets.BOKIE_SERVER_PORT }}
+#         script: |
+#           docker stop saga-web
+#           docker rm saga-web
+#           docker rmi kietara/sagaweb:latest
+#           docker run -d --name saga-web -p 12300:8080 -e spring.datasource.url=jdbc:mysql://172.16.20.10:3306/sagaeco -e spring.datasource.password=${{ secrets.SAGADB_PASSWORD }} kietara/sagaweb:latest
