--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,4 +86,4 @@ jobs:
           docker stop saga-web
           docker rm saga-web
           docker run -d --pull=always --restart always --name saga-web -p ${{ secrets.MAPPING_PORT }} -e spring.datasource.url=${{ secrets.SAGADB_CONNECTION }} -e spring.datasource.password=${{ secrets.SAGADB_PASSWORD }} kietara/sagaweb:latest
- 
+          docker start saga-web
